tests/snapshots/r#mod__parser__ical_example_journals.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: "-//Ximian//NONSGML Evolution Calendar//EN",
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: "2.0",
        },
        ContentLine {
            name: "METHOD",
            params: ContentLineParams(
                [],
            ),
            value: "PUBLISH",
        },
    ],
    events: [],
    alarms: [],
    todos: [],
    journals: [
        IcalJournal {
            uid: "84f728973b37b1cb9abf7556adde789b780779f7",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-07-26T13:06:53Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: Some(
                IcalDTSTARTProperty(
                    Date(
                        CalDate(
                            2025-07-05,
                            Local,
                        ),
                    ),
                    ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "84f728973b37b1cb9abf7556adde789b780779f7",
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250726T130653Z",
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "journal entry!",
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: "20250705",
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "PRIVATE",
                },
                ContentLine {
                    name: "DESCRIPTION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "description\\n\\nnice",
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "1",
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250726T130707Z",
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250726T130707Z",
                },
                ContentLine {
                    name: "X-EVOLUTION-CALDAV-ETAG",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "0af7d703351f3eed3c08491bdcb10a4c138181cc6be73d5b58aa13ccab898b55",
                },
            ],
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: None,
        },
    ],
    free_busys: [],
    vtimezones: {},
    timezones: {},
}
