tests/snapshots/r#mod__parser__ical_example_rrule.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "CALSCALE",
            params: ContentLineParams(
                [],
            ),
            value: "GREGORIAN",
        },
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: "-//Ximian//NONSGML Evolution Calendar//EN",
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: "2.0",
        },
    ],
    events: [
        IcalEvent {
            uid: "eb93535004f863c4e7a39b8b18daa6db3b353348",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-07-23T19:12:44Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                DateTime(
                    CalDateTime(
                        2025-07-23T21:00:00Olson(
                            CEST,
                        ),
                    ),
                ),
                ContentLineParams(
                    [
                        (
                            "TZID",
                            [
                                "Europe/Berlin",
                            ],
                        ),
                    ],
                ),
            ),
            dtend: Some(
                IcalDTENDProperty(
                    DateTime(
                        CalDateTime(
                            2025-07-23T21:25:00Olson(
                                CEST,
                            ),
                        ),
                    ),
                    ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "Europe/Berlin",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: None,
            summary: Some(
                IcalSUMMARYProperty(
                    "something with rrule",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "eb93535004f863c4e7a39b8b18daa6db3b353348",
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250723T191244Z",
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "Europe/Berlin",
                                ],
                            ),
                        ],
                    ),
                    value: "20250723T210000",
                },
                ContentLine {
                    name: "DTEND",
                    params: ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "Europe/Berlin",
                                ],
                            ),
                        ],
                    ),
                    value: "20250723T212500",
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "2",
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "something with rrule",
                },
                ContentLine {
                    name: "TRANSP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "OPAQUE",
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "PUBLIC",
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250723T191256Z",
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250723T191256Z",
                },
            ],
            alarms: [],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: {
        "Europe/Berlin": IcalTimeZone {
            properties: [
                ContentLine {
                    name: "TZID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "Europe/Berlin",
                },
                ContentLine {
                    name: "X-LIC-LOCATION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "Europe/Berlin",
                },
            ],
            transitions: [
                IcalTimeZoneTransition {
                    transition: DAYLIGHT,
                    properties: [
                        ContentLine {
                            name: "TZNAME",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "CEST",
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0100",
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0200",
                        },
                        ContentLine {
                            name: "DTSTART",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "19810329T020000",
                        },
                        ContentLine {
                            name: "RRULE",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "FREQ=YEARLY;UNTIL=20370329T010000Z;BYDAY=-1SU;BYMONTH=3",
                        },
                    ],
                    dtstart: IcalDTSTARTProperty(
                        DateTime(
                            CalDateTime(
                                1981-03-29T02:00:00Local,
                            ),
                        ),
                        ContentLineParams(
                            [],
                        ),
                    ),
                },
                IcalTimeZoneTransition {
                    transition: STANDARD,
                    properties: [
                        ContentLine {
                            name: "TZNAME",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "CET",
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0200",
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0100",
                        },
                        ContentLine {
                            name: "DTSTART",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "19961027T030000",
                        },
                        ContentLine {
                            name: "RRULE",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "FREQ=YEARLY;UNTIL=20361026T010000Z;BYDAY=-1SU;BYMONTH=10",
                        },
                    ],
                    dtstart: IcalDTSTARTProperty(
                        DateTime(
                            CalDateTime(
                                1996-10-27T03:00:00Local,
                            ),
                        ),
                        ContentLineParams(
                            [],
                        ),
                    ),
                },
            ],
        },
    },
    timezones: {
        "Europe/Berlin": Some(
            Europe/Berlin,
        ),
    },
}
