tests/snapshots/r#mod__parser__ical_multiple-2.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: "-//Example Inc.//Example Calendar//EN",
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: "2.0",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "DELEGATED-TO",
                        [
                            "mailto:foo7@bar",
                            "mailto:foo8@bar",
                        ],
                    ),
                    (
                        "CN",
                        [
                            "Foo, Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo1@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "DELEGATED-TO",
                        [
                            "mailto:foo7@bar",
                            "mailto:foo8@bar",
                        ],
                    ),
                    (
                        "CN",
                        [
                            "Foo; Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo2@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "CN",
                        [
                            "Foo, Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo3@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "CN",
                        [
                            "Foo; Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo4@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "DELEGATED-TO",
                        [
                            "mailto:foo7@bar",
                        ],
                    ),
                    (
                        "CN",
                        [
                            "Foo, Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo5@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "DELEGATED-TO",
                        [
                            "mailto:foo7@bar",
                        ],
                    ),
                    (
                        "CN",
                        [
                            "Foo; Bar",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo6@bar",
        },
        ContentLine {
            name: "ATTENDEE",
            params: ContentLineParams(
                [
                    (
                        "ROLE",
                        [
                            "REQ-PARTICIPANT;foo",
                        ],
                    ),
                    (
                        "DELEGATED-FROM",
                        [
                            "mailto:bar@baz.com",
                        ],
                    ),
                    (
                        "PARTSTAT",
                        [
                            "ACCEPTED",
                        ],
                    ),
                    (
                        "RSVP",
                        [
                            "TRUE",
                        ],
                    ),
                ],
            ),
            value: "mailto:foo@bar.com",
        },
        ContentLine {
            name: "X-FOO",
            params: ContentLineParams(
                [
                    (
                        "PARAM1",
                        [
                            "VAL1",
                        ],
                    ),
                ],
            ),
            value: "FOO;BAR",
        },
        ContentLine {
            name: "X-FOO2",
            params: ContentLineParams(
                [
                    (
                        "PARAM1",
                        [
                            "VAL1",
                        ],
                    ),
                    (
                        "PARAM2",
                        [
                            "VAL2",
                        ],
                    ),
                ],
            ),
            value: "FOO;BAR",
        },
        ContentLine {
            name: "X-BAR",
            params: ContentLineParams(
                [
                    (
                        "PARAM1",
                        [
                            "VAL1:FOO",
                        ],
                    ),
                ],
            ),
            value: "BAZ;BAR",
        },
        ContentLine {
            name: "X-BAZ",
            params: ContentLineParams(
                [
                    (
                        "PARAM1",
                        [
                            "VAL1:FOO",
                        ],
                    ),
                    (
                        "PARAM2",
                        [
                            "VAL2",
                        ],
                    ),
                ],
            ),
            value: "BAZ;BAR",
        },
        ContentLine {
            name: "X-BAZ2",
            params: ContentLineParams(
                [
                    (
                        "PARAM1",
                        [
                            "VAL1",
                        ],
                    ),
                    (
                        "PARAM2",
                        [
                            "VAL2:FOO",
                        ],
                    ),
                ],
            ),
            value: "BAZ;BAR",
        },
    ],
    events: [],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: {},
    timezones: {},
}
